# CLI---Todo-List-Manager

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PythonFileToCheckTheFunctionality.py  README.md  docker-compose.yml
sql/: create_db.sql
src/: main.cpp
